--- a/Web/frontend/package.json
+++ b/Web/frontend/package.json
@@ -10,9 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
+    "libphonenumber-js": "^1.11.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.3.0"
+    "react-hook-form": "^7.53.0",
+    "react-icons": "^5.3.0",
+    "react-phone-input-2": "^2.15.1",
+    "react-phone-number-input": "^3.4.6",
+    "react-router-dom": "^6.26.2",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
