--- a/Android/mobile/pubspec.yaml
+++ b/Android/mobile/pubspec.yaml
@@ -35,6 +35,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  flutter_lints: ^3.0.2
+  equatable: ^2.0.5
+  dartz: ^0.10.1
+  dio: ^5.7.0
+  bloc: ^8.1.4
+  shared_preferences: ^2.3.2
 
 dev_dependencies:
   flutter_test:
